--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mantine/hooks": "^8.3.13",
     "@mantine/notifications": "^8.3.13",
     "@supabase/supabase-js": "^2.90.1",
+    "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.19",
     "react": "^19.2.0",
