--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,7 +23,7 @@ jobs:
           cache: "pnpm"
           cache-dependency-path: frontend/pnpm-lock.yaml
       - name: Enable corepack
-        run: corepack enable
+        run: corepack enable && corepack prepare pnpm@latest --activate
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Lint
@@ -49,8 +49,13 @@ jobs:
           cache: "pnpm"
           cache-dependency-path: frontend/pnpm-lock.yaml
       - name: Enable corepack
-        run: corepack enable
+        run: corepack enable && corepack prepare pnpm@latest --activate
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
         run: pnpm build
+      - name: Upload frontend build
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: frontend/dist
