--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -22,8 +22,10 @@ jobs:
           node-version: "20"
           cache: "pnpm"
           cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Enable corepack
-        run: corepack enable && corepack prepare pnpm@latest --activate
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Lint
@@ -48,8 +50,10 @@ jobs:
           node-version: "20"
           cache: "pnpm"
           cache-dependency-path: frontend/pnpm-lock.yaml
-      - name: Enable corepack
-        run: corepack enable && corepack prepare pnpm@latest --activate
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: latest
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
